[project]
name = "troninfo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.8",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.6",
    "sqlalchemy>=2.0.38",
    "tronpy>=0.5.0",
    "uvicorn>=0.34.0",
]
